--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,4 @@
 {
   "name": "ifedorov_testing/DummyTesting",
-  "description": "Dummy Project for Testing",
+  "description": "Dummy Project for Testing"
 }
