--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
   },
   "require": {
     "php": "^8.2",
-    "laravel/framework": "v9.0.0"
+    "laravel/framework": "v9.0.0",
+    "phpunit/phpunit": "^10"
   }
 }
